style: z-index fix

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,7 +5,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  z-index: 20;
+  z-index: 9999;
   position: fixed;
   pointer-events: none;
   mix-blend-mode: difference;
@@ -102,7 +102,7 @@
 }
 
 .hidden-header {
-  z-index: 10;
+  z-index: 9998;
   position: fixed;
   display: flex;
   justify-content: space-between;
